recursion.lessons.recursion.tree.Tree.scala.error
Tree:1: error: Missing closing brace `}' assumed here
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
^